<resources>
    <string name="app_name">Angles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bt_con">Bluetooth</string>
    <string name="connect">Connect</string>
    <string name="pitch">Pitch:</string>
    <string name="textview">TextView</string>
    <string name="roll">Roll:</string>
    <string name="yaw">Yaw:</string>
    <string name="alt">Alt:</string>
</resources>